Fixed some general content