@@ -6,42 +6,28 @@ import it.polimi.ingsw.model.Shop;
 import it.polimi.ingsw.model.card.DevelopmentCard;
 
 public class CardShopAction extends Action {
-    //AFTER CHECKING IF THE CHOSEN POSITION ON THE BOARD CAN FIT THE CHOSEN CARD, RETURN TRUE IF EVERYTHING IS DONE CORRECTLY, FALSE IF NOT
+    //AFTER CHECKING IF THE CHOSEN POSITION ON THE BOARD CAN FIT THE CHOSEN CARD AND THE PLAYER CAN AFFORD IT, RETURN TRUE IF EVERYTHING IS DONE CORRECTLY, FALSE IF NOT
     public boolean buyCard(int row,int column, ResourceCount storageCount, ResourceCount chestCount, PlayerDashboard player, int deckPosition, Shop shop){
-        DevelopmentCard chosen = shop.getGrid()[row][column].getDeck().get(0);
+        DevelopmentCard chosen = shop.getGrid()[row][column].getFirst();
 
-        if(checkIfPossible(chosen.getLevel(), player)){
+        if(checkIfPossible(chosen.getLevel(),deckPosition, player) && chosen.getCost().equals(ResourceCount.getTotal(storageCount,chestCount))){
             chosen = shop.buy(row,column);
             player.addDevCards(chosen,deckPosition);
-            if(deleteRes(storageCount,chestCount,player))
-                return true;
-            else
-                return false;
+            deleteRes(storageCount,chestCount,player);
+            return true;
         }
         return false;
     }
 
-    //1st METHOD: CHECK ALL POSITIONS AND SEE IF THERE'S ONE THAT FITS THE CARD CHOSEN
-    public boolean checkIfPossible(int level, PlayerDashboard player){
-        boolean check = false;
-        for(int i=0; i<3; i++) {
-            if (level == 1)
-                if (player.getDevCards()[i] == null)
-                    check = true;
-                else if (player.getDevCards()[i].getFirst().getLevel() == level - 1)
-                    check = true;
-        }
-        return check;
-    }
-    //2nd METHOD: CHECK IF THE CHOSEN POSITION FIT THE CARD CHOSEN
-    /*public boolean checkIfPossible(int level, int position, PlayerDashboard player){
+    //CHECK IF THE CHOSEN POSITION FIT THE CARD CHOSEN
+    public boolean checkIfPossible(int level, int position, PlayerDashboard player){
         boolean check = false;
         if(level == 1)
-            if(player.getDevCards()[position] == null)
+            if(player.getDevCards()[position].getDeck().size() == 0)
                 check = true;
         else
-            if(player.getDevCards()[position].getFirst().getLevel() == level - 1)
+            if(player.getDevCards()[position].getFirst().getLevel() == (level - 1))
                 check = true;
         return check;
-     }*/
+     }
 }
